--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "mongoose": "^5.7.1"
   }
